--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -175,7 +175,7 @@
     <string name="cancel_ride_text">શું તમે સવારી રદ્દ કરવા માંગો છો ?</string>
     <string name="end_ride_text">શું તમે સવારી પૂર્ણ કરવા માંગો છો ?</string>
     <string name="logout_text">શું તમે લોગ આઉટ થવા માંગો છો ?</string>
-    <string name="start_ride_text">શું તમે સવારી શરુ કરવા માંગો છો ?</string>
+    <string name="start_ride_text">Please confirm you have picked up customer : %s</string>
     <string name="battery_level_text">રાઈડ સ્વીકારવા માટે બેટરી સ્તર કરતાં 20% કરતા વધારે હોવા જ જોઈએ . ચાર્જર કનેક્ટ કરો  .</string>
     <string name="battery_level_start_text">રાઈડ શરુ કરવા  માટે બેટરી સ્તર કરતાં 20% કરતા વધારે હોવા જ જોઈએ . ચાર્જર કનેક્ટ કરો  .</string>
     <string name="battery_level_arrived_text">રાઈડ આગમન  માટે બેટરી સ્તર કરતાં 20% કરતા વધારે હોવા જ જોઈએ . ચાર્જર કનેક્ટ કરો  .</string>
