fair_caching_changes: schedule driver call api
fair_caching_changes: gradle version update

fair_caching_changes: show in app call us side menu check

fair_caching_changes: changes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -824,6 +824,7 @@
     <string name="deducted">Deducted</string>
     <string name="office_address">Office Address</string>
     <string name="view_wallet_transactions">ମୁଣି ର ଦୃଶ୍ଯ ଦେଣନେ</string>
+    <string name="get_support">Get Support</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
