--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -826,6 +826,7 @@
     <string name="deducted">Deducted</string>
     <string name="office_address">Office Address</string>
     <string name="view_wallet_transactions">વૉલેટ નું વ્યવહાર જુઓ</string>
+    <string name="get_support">Get Support</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
