--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -851,6 +851,7 @@
     <string name="deducted">Deducted</string>
     <string name="office_address">Office Address</string>
     <string name="view_wallet_transactions">ವಾಲೆಟ್ ಟ್ರಾಸಾಕ್ಷನ್ಸ್ ವೀಕ್ಷಿಸಿ</string>
+    <string name="get_support">Get Support</string>
 
 
     <string-array name="CountryCodes" >
