--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -906,6 +906,7 @@
     <string name="deducted">Deducted</string>
     <string name="office_address">Office Address</string>
     <string name="view_wallet_transactions">பணப்பை பரிவர்த்தனை விவரங்கள்</string>
+    <string name="get_support">Get Support</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
