--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -878,6 +878,8 @@
     <string name="office_address">Office Address</string>
     <string name="view_wallet_transactions">4. View Wallet Transactions</string>
     <string name="get_support">Get Support</string>
+    <string name="schedule_call_message">Press the below button to get support from Jugnoo. Our executive will call you shortly.</string>
+    <string name="get_call">Get call</string>
 
 
     <string-array name="CountryCodes" >
