feat_captive_driver: Label added for earnings screen

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -895,6 +895,7 @@
     <string name="slots">ONLINE HOURS</string>
     <string name="hour">hour</string>
     <string name="hours">hours</string>
+    <string name="current_earnings">CURRENT EARNINGS</string>
 
     <string-array name="CountryCodes">
         <item>93,AF</item>
