--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -896,6 +896,8 @@
     <string name="hour">hour</string>
     <string name="hours">hours</string>
     <string name="day_wise_breakup">DAY WISE BREAKUP</string>
+    <string name="target_distance">Target Distance</string>
+    <string name="cash_collected_from_user">Cash collected from user</string>
 
     <string-array name="CountryCodes">
         <item>93,AF</item>
