--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
 
-	<string name="app_name">Jugnoo Drivers</string>
+	<string name="app_name">Jingo Drivers</string>
 	<string name="hello_world">Hello world!</string>
 	<string name="action_settings">Settings</string>
 
