--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -3,7 +3,7 @@
 
 
 
-    <string name="app_name">Jugnoo Drivers</string>
+    <string name="app_name">Jingo Drivers</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
