--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -912,6 +912,8 @@
     <string name="error_no_countries_found">No Countries Found!</string>
     <string name="country_picker_header">Select country</string>
     <string name="error_listener_not_set">Listener is not set you will not receive any callback for country picked!</string>
+    <string name="code">Code</string>
+    <string name="please_select_country_code">Please select country code</string>
 
     <string-array name="CountryCodes">
         <item>+93,AF</item>
