--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -899,6 +899,8 @@
     <string name="target_distance">Target Distance</string>
     <string name="cash_collected_from_user">Cash collected from user</string>
     <string name="adjusted_distance">Adjusted Distance</string>
+    <string name="metering_service_notif_label">Ride in progress</string>
+    <string name="update_location_notif_label">You are online</string>
 
     <string-array name="CountryCodes">
         <item>93,AF</item>
